# Document  $Id$
# Summary   File changelog for the chemical-mime-data project.

2006-05-08 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* src/chemical-mime-database.xml.in: Removing useless spaces and tabs
	at line-ends.
	(chemical/x-genbank): Fixed an invalidity, which clashes with the DTD.

2006-05-08 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* TODO: Removed stuff done by Jerome.

	* ChangeLog: Added missing entry for Jeromes last commit.

2006-05-08 Jerome Pansanel <j.pansanel@pansanel.net>

	* configure.ac (ALL_LINGUAS): Re-Added French to available
	translations.

	* src/chemical-mime-database.xml.in: Added chemical/x-genbank,
	chemical/x-inchi, chemical/x-inchi-xml, chemical/x-jcamp-dx,
	chemical/x-shelx, chemical/x-vmd MIME types (kfile_chemical support).
	(chemical/x-daylight-smiles): Added one missing pattern.
	(chemical/x-dmol, chemical/x-mol2): Fixed a typo in the comment.

2006-05-08 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* TODO: Added note about KDE and GNOME MIME magic databases.

2006-05-06 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* src/Makefile.am (check-local): Added XMLLINT_FLAGS to command.

2006-05-06 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* freedesktop.org/Makefile.am (chemical-mime-data.xml): Added
	cmd_common.xsl to prerequisites and fixed rule.

	* gnome/Makefile.am (chemical-mime-data.keys)
	(chemical-mime-data.mime): Ditto.

	* kde/Makefile.am (*.desktop): Ditto.

2006-05-06 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* TODO: Just added a note about viewmol.

	* configure.ac (AM_GNU_GETTEXT, CATOBJEXT): Work around a bug in
	gettext.m4 leading to non-updateable translations.

	* xsl/cmd_kde.xsl (pattern.list): Fixed the wrong field name.

2006-05-03 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* HACKING: Added.

	* Makefile.am (EXTRA_DIST): Ditto.

	* TODO: Improved overview and structure.

	* src/chemical-mime-database.xml.in: Changed DTD for application